# Restaurant-Finder-Agentic-ai

./: .gitignore
.github/workflows/: deploy-image.yml  deploy-infra.yml  destroy-infra.yml
restaurant-finder-api/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml  test_container.py
restaurant-finder-api/src/: api.py  config.py  main.py
restaurant-finder-api/src/application/orchestrator/: streaming.py
restaurant-finder-api/src/application/orchestrator/workflow/: chains.py  edges.py  graph.py  nodes.py  state.py  tools.py
restaurant-finder-api/src/domain/: models.py  prompts.py
restaurant-finder-api/src/infrastructure/: guardrails.py  mcp_client.py  memory.py  observability.py
restaurant-finder-infra/: .gitignore  app.py
restaurant-finder-infra/lib/stacks/: __init__.py  ecr_stack.py  mcp_stack.py
restaurant-finder-infra/mcp/lambda/: handler.py  requirements.txt  tools_schema.json
restaurant-finder-ui/: .env.example  .gitignore  app.py  pyproject.toml
