#restaurant-finder-api/pyproject.toml
[project]
name = "restaurant-finder-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.35",
    "langchain>=0.3.7",
    "langchain-aws>=0.2.6",
    "boto3>=1.35.0",
    "pydantic>=2.9.0",
    "bedrock-agentcore>=0.1.0",
    "opentelemetry-api>=1.20.0",  
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"